# ollama-chatbot-medium

./: README.md  main.py  pyproject.toml
infra/: docker-compose.yaml
templates/: index.html
