[tool.poetry]
name = "ollama-medium"
version = "0.1.0"
description = ""
authors = ["Marquis Chamberlain <marquischamberlain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.1.9"
logging = "^0.4.9.6"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
